2019-05-06  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptex-base.ch:
	Make appropreate comparison of U+0100 by \if in upTeX.
	https://github.com/texjporg/tex-jp-build/issues/68

2019-02-03  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptex-base.ch: Ignore newline char after Japanese control
	symbol. https://github.com/texjporg/tex-jp-build/issues/37
	* tests/control_symbol.tex: More test cases.
	* ptex_version.h: pTeX version p3.8.2.

2019-02-03  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>
	and Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* ptex-base.ch: Change the behavior of \inhibitglue. See
	  https://github.com/texjporg/tex-jp-build/issues/28.
	  - \inhibitglue becomes ineffective when it encounters a node.
	    (former commit on 2014-05-06 was still insufficient.)
	  - non-expandable tokens without node (e.g. \relax, assignment)
	    becomes transparent.
	  - \inhibitglue inside a list does not affect another list.
	  - Add new primitive \disinhibitglue to reset the inhibit glue
	    flag explicitly.
	* tests/inhibitglue.tex: Added.

2019-02-03  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* kanji.h: Use fputs2() to benefit from kanji encoding conversion.
	https://github.com/texjporg/tex-jp-build/issues/34

2019-01-23  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* ptex-base.ch: Add dump_kanji and undump_kanji.
	* ptex.defines: Add dumpkanji and undumpkanji.
	* kanji.c: Factor out init_kanji().
	* kanji_dump.c: New file for dumping/undumping kanji encoding.
	* kanji.h: Add init_kanji(), dump_kanji(), and undump_kanji().
	* am/ptex.am (libkanji_a_SOURCES): Add kanji_dump.c.
	(all changes based on tl r23753 of upTeX, dated 2011-08-29.)

	* kanji_dump.c: Throw a warning when kanji internal encoding
	is incompatible with the preloaded format.
	https://github.com/texjporg/tex-jp-build/issues/55

2018-09-09  Karl Berry  <karl@tug.org>

	* ptriptest.test: LC_ALL=LANGUAGE=C.

2018-06-14  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>